--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async 
+        src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chang Gao - Economics PhD Student</title>
@@ -196,7 +200,7 @@
         .section-subtitle {
             color: var(--dark-gray);
             font-size: 16px;
-            margin-bottom: 60px;
+            margin-bottom: 20px;
         }
 
         /* Research Section */
@@ -415,11 +419,6 @@
                             I am a 4-year PhD student at the Department of Economics, University of Oklahoma. 
                             My research lies empirical macroeconomics, such as xxx.
                         </p>
-                        <!-- <p class="intro-text">
-                            I am particularly interested in how aging populations impact housing prices and 
-                            macroeconomic stability in developed economies. My work combines theoretical modeling 
-                            with empirical analysis to explore these important policy-relevant questions.
-                        </p> -->
                         
                         <div class="contact-info">
                             <div class="contact-item">
@@ -458,17 +457,6 @@
         <path d="M12 2C6.48 2 2 6.48 2 12c0 4.42 2.87 8.17 6.84 9.5.5.09.68-.22.68-.48v-1.69c-2.78.6-3.37-1.34-3.37-1.34-.45-1.15-1.11-1.46-1.11-1.46-.91-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.89 1.53 2.34 1.09 2.91.83.09-.65.35-1.09.63-1.34-2.22-.25-4.55-1.11-4.55-4.95 0-1.09.39-1.98 1.03-2.68-.1-.25-.45-1.27.1-2.64 0 0 .84-.27 2.75 1.02.79-.22 1.65-.33 2.5-.33.85 0 1.71.11 2.5.33 1.91-1.29 2.75-1.02 2.75-1.02.55 1.37.2 2.39.1 2.64.64.7 1.03 1.59 1.03 2.68 0 3.85-2.34 4.69-4.57 4.94.36.31.68.92.68 1.85v2.74c0 .27.18.58.69.48C19.13 20.17 22 16.42 22 12c0-5.52-4.48-10-10-10z"/>
     </svg>
 </a>
-                            <!-- <a href="mailto:gaochang1226@gmail.com" title="Email">
-                                <svg viewBox="0 0 24 24">
-                                    <path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
-                                </svg>
-                            </a> -->
-
-                            <!-- <a href="#" title="Google Scholar">
-                                <svg viewBox="0 0 24 24">
-                                    <path d="M12 2L2 7v10c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V7l-10-5z"/>
-                                </svg>
-                            </a> -->
                         </div>
                     </div>
                 </div>
@@ -534,38 +522,29 @@
                         </div>
                     </div>
                 </div>
-                <h2>Some Notes</h2>
-                <p class="section-subtitle">
-                    Here are serval notes I worte in previous study, which might be helpful for classes related to them:
-                    <a href="https://changao1.github.io/assets/cournot_oligopoly.pdf" style="color: #666666; text-decoration: underline; text-decoration-thickness: 1px;">
-                        <h2>Cournot Oligopoly Notes</h2>
-                    </a>
+                <h2>Notes</h2>
+<p class="section-subtitle">
+    Here are some notes I wrote in previous study, which might be helpful for classes related to them:
+    <a href="https://changao1.github.io/assets/cournot_oligopoly.pdf" style="text-decoration: none;">
+        <p>Notes on Cournot Oligopoly from \(2\) to \(2n\) players</p>
+    </a>
 
-                    <a href="https://changao1.github.io/assets/little_notes_on_DP.pdf" style="color: #666666; text-decoration: underline; text-decoration-thickness: 1px;">
-                        <h2>Little Notes on Dynamic Programming</h2>
-                    </a>
+    <a href="https://changao1.github.io/assets/little_notes_on_DP.pdf" style="text-decoration: none;">
+        <p>Little notes on the proof of Dynamic Programming</p>
+    </a>
 
-                    <a href="https://changao1.github.io/assets/n-1.pdf" style="color: #666666; text-decoration: underline; text-decoration-thickness: 1px;">
-                        <h2>Why $n-1$ on the denominator of sampple variance? For my ECON2843 class.</h2>
-                    </a>
-
-                </p>
+<a href="https://changao1.github.io/assets/n-1.pdf" style="text-decoration: none;">
+    <p>Why \(n-1\) on the denominator of sample variance, for the ECON2843 course at OU.</p>
+</a>
+</p>
             </section>
 
             <!-- CV Section -->
             <section id="resume">
                 <div class="cv-container">
-<a href="https://changao1.github.io/assets/resume_chang_gao.pdf" style="color: #666666; text-decoration: underline; text-decoration-thickness: 1px;">
-  <h2>Click here for Resumé</h2>
-</a>
-                    <!-- <p>
-                        See my CV with the following link.
-                    </p>
-                    <a  
-                       target="_blank" 
-                       class="cv-button">
-                        Download CV (PDF)
-                    </a> -->
+            <a href="https://changao1.github.io/assets/resume_chang_gao.pdf" style="color: #666666; text-decoration: underline; text-decoration-thickness: 1px;">
+                <h2>Click here for Resumé</h2>
+            </a>
                 </div>
             </section>
         </div>
