update title of n-1 notes

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
     </a>
 
 <a href="https://changao1.github.io/assets/n-1.pdf" style="text-decoration: none;">
-    <p>Why \(n-1\) on the denominator of sample variance, for the ECON2843 course at OU.</p>
+    <p>Why \(n-1\) on the denominator of sample variance for ECON2843 at OU</p>
 </a>
 </p>
             </section>
