--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
     </a>
 
     <a href="https://changao1.github.io/assets/little_notes_on_DP.pdf" style="text-decoration: none;">
-        <p>Little notes on the proof of Dynamic Programming</p>
+        <p>Little notes on the proof of dynamic programming using envelope theorem</p>
     </a>
 
 <a href="https://changao1.github.io/assets/n-1.pdf" style="text-decoration: none;">
