--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
 <p class="section-subtitle">
     Here are some notes I wrote in previous study, which might be helpful for classes related to them:
     <a href="https://changao1.github.io/assets/cournot_oligopoly.pdf" style="text-decoration: none;">
-        <p>Notes on Cournot Oligopoly from \(2\) to \(2n\) players</p>
+        <p>Notes on Cournot oligopoly from \(2\) to \(2n\) players</p>
     </a>
 
     <a href="https://changao1.github.io/assets/little_notes_on_DP.pdf" style="text-decoration: none;">
