--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
                 </div>
                 <h2>Notes</h2>
 <p class="section-subtitle">
-    Here are some notes I wrote in previous study, which might be helpful for classes related to them:
+    Here are some notes I wrote in previous study, which might be helpful for courses related to them:
     <a href="https://changao1.github.io/assets/cournot_oligopoly.pdf" style="text-decoration: none;">
         <p>Notes on Cournot oligopoly from \(2\) to \(2n\) players</p>
     </a>
