--- a/index.html
+++ b/index.html
@@ -414,9 +414,9 @@
                 <div class="about-grid">
                     <div>
                         <h1 style="font-family: 'Garamond', serif;">Chang Gao</h1>
-                        <p class="subtitle">PhD Student in Economics</p>
+                        <p class="subtitle">PhD Candidate in Economics</p>
                         <p class="intro-text">
-                            I am a 4-year PhD student at the Department of Economics, University of Oklahoma. 
+                            I am a 4-year PhD Candidate at the Department of Economics, University of Oklahoma. 
                             My research lies empirical macroeconomics, such as xxx.
                         </p>
                         
